--- a/fft.tex
+++ b/fft.tex
@@ -2,3 +2,4 @@ Normal FFT:
 \[
 x\left[k\right]=\sum_{n=1}^{N-1}x[n]e^\frac{-i2\pi kn}{N}
 \]
+This operation has complexity $N\times N$, o almeno credo
