--- a/fft.ipynb
+++ b/fft.ipynb
@@ -412,7 +412,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As we can see, the FFT algorithm outperforms both of the direct DFT methods by orders of magnitude."
+    "As we can see, the FFT algorithm outperforms both of the direct DFT methods by orders of magnitude. \n",
+    "\n",
+    "We can further test this function for its intended purpose by creating a series of samples from an harmonic signal and feed it into the FFT algorithm."
    ]
   },
   {
