voglio dormire e possibilmente uccidermi

--- a/fft.ipynb
+++ b/fft.ipynb
@@ -464,19 +464,45 @@
    "source": [
     "Here we chose to represent our curve with 2048 points per second. According to the Nyquist-Shannon sampling theorem, this only allows us to represent frequencies up to $\\frac{1}{2}$ the sampling frequency (in our case $2048/2=1024$). This threshold is called the _Nyquist frequency_. \n",
     "\n",
-    "It is important reminding that the transformed sequence X is a sequence of complex numbers with an imaginary part (representing the phase of the corresponding frequency) and a real part (representing the magnitude of the corresponding freqeuncy). In order for these numbers to be represented on a spectrogram, it is necessary to take the absolute value of the transformed frequency and ditch the imaginary part, since spectrograms do not contain information about the phase."
+    "It is important to remind that the transformed sequence X is a sequence of complex numbers with an imaginary part (representing the phase of the corresponding frequency) and a real part (representing the magnitude of the corresponding freqeuncy). In order for these numbers to be represented on a spectrogram, it is necessary to take the absolute value of the transformed frequency and ditch the imaginary part, since spectrograms do not contain information about the phase."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Another issue worth addressing, when analyzing the spectrogram of a DFT of a fully real input (like a sequence of PCM samples) is the evident \"mirroring\" of the frequencies around the Nyquist frequency."
+    "Another issue worth addressing when analyzing the spectrogram of a DFT of a fully real input (like a sequence of PCM samples) is the evident \"mirroring\" of the frequencies around the Nyquist frequency. This is due to the nature itself of the DFT of a real, which is __conjugate symmetric__. Consider the $k-th$ bin of the transformed sequence, with $1\\leqslant k\\leqslant N-1$\n",
+    "$$ X_k =\\sum_{n=0}^{N-1}x_ne^{-i\\frac{2\\pi}{N}kn}$$\n",
+    "And the $(N-k)-th$ bin \n",
+    "$$\n",
+    "\\begin{align*}\n",
+    "X_{N-k}&=\\sum_{n=0}^{N-1}x_ne^{-i\\frac{2\\pi}{N}(N-k)n}\\\\\n",
+    "&=\\sum_{n=0}^{N-1}x_ne^{(-i2\\pi+i\\frac{2\\pi}{N}k)n}\\\\\n",
+    "&=\\sum_{n=0}^{N-1}x_ne^{+i\\frac{2\\pi}{N}kn}\\\\\n",
+    "\\end{align*}\n",
+    "$$\n",
+    "Consider now the complex conjugate of $X_k$, $(X_k)^*$:\n",
+    "$$\n",
+    "\\begin{align*}\n",
+    "(X_k)^*&=\\left(\\sum_{n=0}^{N-1}x_ne^{-i\\frac{2\\pi}{N}kn}\\right)^*\\\\\n",
+    "&=\\sum_{n=0}^{N-1}(x_n)^*e^{+i\\frac{2\\pi}{N}kn}\n",
+    "\\end{align*}\n",
+    "$$\n",
+    "but since $x_n$ is real and therefore has no imaginary part, we have that $(x_n)^*=x_n$ and so\n",
+    "$$\n",
+    "\\begin{align*}\n",
+    "(X_k)^*&=\\sum_{n=0}^{N-1}x_ne^{+i\\frac{2\\pi}{N}kn}\\\\\n",
+    "&=X_{N-k}.\n",
+    "\\end{align*}\n",
+    "$$\n",
+    "The fact that $X_{N-k}=(X_k)^*$ has the important consequence that the real parts of $X_{N-k}$ and $X_k$ are identical in their real parts, while their imaginary parts have the same maginitude but opposite signs. An interesting interpretation of this fact lies in the observations that the parts with negative imaginary part (which corresponds to a _negative phase_) are _negative frequencies_, that \"spin\" in the opposite direction of the positive frequency. \n",
+    "\n",
+    "This fact has, of course, little application in the practice of digital signal processing and this is why the negative frequencies produced by the DFT are usually ditched."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
@@ -515,8 +541,7 @@
     "X_oneside =X[:n_oneside]/n_oneside\n",
     "\n",
     "plt.subplot(122)\n",
-    "plt.stem(f_oneside, abs(X_oneside), 'g', \\\n",
-    "         markerfmt=\" \", basefmt=\"-g\")\n",
+    "plt.stem(f_oneside, abs(X_oneside), 'g', markerfmt=\" \", basefmt=\"-g\")\n",
     "plt.xlabel('Freq (Hz)')\n",
     "plt.ylabel('Normalized FFT Amplitude |X(freq)|')\n",
     "plt.tight_layout()\n",
@@ -529,14 +554,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can here see a distinctive feature of FFT on real-valued signals: in the"
+    "In these spectrograms, respectively the full one and the \"one-sided\" one.\n",
+    "\n",
+    "There is an interesting consideration to do about the first spectrogram. According to what we saw earlier, we would expect the transformed sequence to present negative frequencies (that would be reflected in the positive domain due to the presence of the absolute value operator on the transformed sequence) but all we see is that the \"true\" frequencies that concur to the energy of the signal (in our case 1Hz, 20Hz and 200Hz) are mirrored towards the higher end of the spectrum around the Nyquist frequency. \n",
+    "This is due to the phenomenon of aliasing: as said before, given a certain frequency of sample rate we will be able to represent only the frequencies below $\\frac{1}{2}$ of the sample rate (Nyquist frequency $f_{Ny}$), since any higher frequency $f_0$ would appear, from the samples, indistinguishable (\"aliased\") from the frequency corresponding to $f_{Ny}-f_0$. \n",
+    "This implies that high frequencies beyond the Nyquist frequency are \"aliased\" (and vice versa) to the negative frequencies, explaining the absence of the latter from the spectrogram.\n",
+    "\n",
+    "Either way, the result is the same: negative frequencies are ditched due to their lack of usefulness in real-world application and frequencies beyond the Nyquist frequency are ditched because they are impossible to represent uniquely. One should take into account this fact when representing \"one-sided\" spectrogram by adjusting the energy of the real frequencies by a factor of 2 (to make up for the ditched frequencies, that in practice are identical manifestations of the real frequencies)."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Iterative Fast Fourier Transform Algorithm"
+    "## A possible step further: Iterative Fast Fourier Transform Algorithm\n",
+    "\n",
+    "The recursive FFT, as we saw earlier, has an arithmetic complexity of $\\mathcal{O}(N \\log(N))$ but, being a recursive algorithm, leads to relevant stack problems, as I experienced before trying to feed 10 billions complex numbers into the FFT algorithm causing my laptop to burn through all 32 GBs of ram and cursing me till the end of time. Looks like i won't be emulating ps2 games on the ThinkPad anytime soon. The problem lies in the fact that every recursion calls the function twice and each time it stores an array of length $2^n$ $n$ times. This is due to the fact that the recursive FFT is a \"out-of-place\" algorithm that allocates memory for each iteration without overwriting alreay allocated memory.\n",
+    "\n",
+    "A possible solution to this issue lies in a \"in-place\" version of the FFT algorithm that "
    ]
   }
  ],
