--- a/fft.ipynb
+++ b/fft.ipynb
@@ -495,7 +495,7 @@
     "&=X_{N-k}.\n",
     "\\end{align*}\n",
     "$$\n",
-    "The fact that $X_{N-k}=(X_k)^*$ has the important consequence that the real parts of $X_{N-k}$ and $X_k$ are identical in their real parts, while their imaginary parts have the same maginitude but opposite signs. An interesting interpretation of this fact lies in the observations that the parts with negative imaginary part (which corresponds to a _negative phase_) are _negative frequencies_, that \"spin\" in the opposite direction of the positive frequency. \n",
+    "The fact that $X_{N-k}=(X_k)^*$ has the important consequence that the real parts of $X_{N-k}$ and $X_k$ are identical, while their imaginary parts have the same maginitude but opposite signs. An interesting interpretation of this fact lies in the observations that the parts with negative imaginary part (which corresponds to a _negative phase_) are _negative frequencies_, that \"spin\" in the opposite direction of the positive frequency. \n",
     "\n",
     "This fact has, of course, little application in the practice of digital signal processing and this is why the negative frequencies produced by the DFT are usually ditched."
    ]
