--- a/fft.ipynb
+++ b/fft.ipynb
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -139,7 +139,7 @@
        " np.complex128(-3.9999999999999725-9.656854249492369j)]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -189,7 +189,7 @@
        "       -4.-4.00000000e+00j, -4.-9.65685425e+00j])"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -274,27 +274,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
     "def dit_FFT(x):\n",
     "    N = len(x)\n",
     "    #base case\n",
-    "    if N == 1:\n",
+    "    if N == 1: \n",
     "        return x\n",
-    "    else:\n",
-    "        if N % 2 > 0:\n",
-    "            raise ValueError(\"input lenght must be a power of 2\")\n",
-    "        else:\n",
-    "            X_even = dit_FFT(x[::2]) #recursive call\n",
-    "            X_odd = dit_FFT(x[1::2])\n",
-    "            #twiddle factors\n",
-    "            twiddle = np.exp(-2j*np.pi*np.arange(N)/ N)\n",
-    "            #here we build the final array by concatenating the result of the \"smaller\" FFTs with the appropriate\n",
-    "            #twiddle factor.\n",
-    "            X = np.concatenate([X_even+twiddle[:int(N/2)]*X_odd, X_even+twiddle[int(N/2):]*X_odd])\n",
-    "    return X"
+    "    if N % 2 > 0:\n",
+    "        raise ValueError(\"input lenght must be a power of 2\")\n",
+    "    #recursive call: split the input in the even/odd part and call the function again\n",
+    "    even = dit_FFT(x[::2])\n",
+    "    odd =  dit_FFT(x[1::2])\n",
+    "    r = range(N//2)\n",
+    "    #calculate twiddle factors multiplied for the odd part\n",
+    "    oddtwiddle = [np.exp(-2j * np.pi * k / N) * odd[k] for k in r]\n",
+    "    #concatenating the X_k component with the X_{k+N/2} component\n",
+    "    res = ([even[k] + oddtwiddle[k] for k in r] + [even[k] - oddtwiddle[k] for k in r])\n",
+    "    return res\n"
    ]
   },
   {
@@ -306,24 +305,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a=dit_FFT([1,2,3,4,5,6,7,8])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([36.+0.00000000e+00j, -4.+9.65685425e+00j, -4.+4.00000000e+00j,\n",
-       "       -4.+1.65685425e+00j, -4.-2.44929360e-15j, -4.-1.65685425e+00j,\n",
-       "       -4.-4.00000000e+00j, -4.-9.65685425e+00j])"
+       "array([36.        , 10.45250372,  5.65685425,  4.3295688 ,  4.        ,\n",
+       "        4.3295688 ,  5.65685425, 10.45250372])"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "dit_FFT([1,2,3,4,5,6,7,8])"
+    "np.abs(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[np.complex128(36+0j),\n",
+       " np.complex128(-4.000000000000003+9.65685424949238j),\n",
+       " np.complex128(-4.000000000000002+3.9999999999999982j),\n",
+       " np.complex128(-4+1.656854249492386j),\n",
+       " np.complex128(-4-3.91886975727153e-15j),\n",
+       " np.complex128(-4.0000000000000115-1.6568542494923912j),\n",
+       " np.complex128(-4.000000000000018-4.000000000000005j),\n",
+       " np.complex128(-3.9999999999999725-9.656854249492369j)]"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "direct_dft([1,2,3,4,5,6,7,8])"
    ]
   },
   {
@@ -335,15 +369,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "75.8 μs ± 3.17 μs per loop (mean ± std. dev. of 7 runs, 10,000 loops each)\n",
-      "96 μs ± 2.98 μs per loop (mean ± std. dev. of 7 runs, 10,000 loops each)\n"
+      "11.7 μs ± 84.3 ns per loop (mean ± std. dev. of 7 runs, 100,000 loops each)\n",
+      "45.7 μs ± 273 ns per loop (mean ± std. dev. of 7 runs, 10,000 loops each)\n"
      ]
     }
    ],
@@ -361,15 +395,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "71 μs ± 1.87 μs per loop (mean ± std. dev. of 7 runs, 10,000 loops each)\n",
-      "14.8 μs ± 100 ns per loop (mean ± std. dev. of 7 runs, 100,000 loops each)\n"
+      "33.7 μs ± 294 ns per loop (mean ± std. dev. of 7 runs, 10,000 loops each)\n",
+      "6.57 μs ± 38 ns per loop (mean ± std. dev. of 7 runs, 100,000 loops each)\n"
      ]
     }
    ],
@@ -387,16 +421,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "99.2 ns ± 2.86 ns per loop (mean ± std. dev. of 7 runs, 10,000,000 loops each)\n",
-      "80.5 μs ± 1.38 μs per loop (mean ± std. dev. of 7 runs, 10,000 loops each)\n",
-      "162 μs ± 20.3 μs per loop (mean ± std. dev. of 7 runs, 10,000 loops each)\n"
+      "37.2 ns ± 0.211 ns per loop (mean ± std. dev. of 7 runs, 10,000,000 loops each)\n",
+      "300 μs ± 3.88 μs per loop (mean ± std. dev. of 7 runs, 1,000 loops each)\n",
+      "338 μs ± 9.4 μs per loop (mean ± std. dev. of 7 runs, 1,000 loops each)\n",
+      "38.5 ns ± 0.0761 ns per loop (mean ± std. dev. of 7 runs, 10,000,000 loops each)\n"
      ]
     }
    ],
@@ -406,7 +441,7 @@
     "\n",
     "%timeit dit_FFT(signal)\n",
     "%timeit direct_dft(signal)\n",
-    "%timeit np_dft(signal)\n"
+    "%timeit np_dft(signal)         \n"
    ]
   },
   {
@@ -420,7 +455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -502,7 +537,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -518,7 +553,7 @@
    ],
    "source": [
     "X=dit_FFT(additive_wave)\n",
-    "\n",
+    "X = np.array(X)\n",
     "# calculate the frequency\n",
     "N = len(X)\n",
     "n = np.arange(N)\n",
@@ -527,7 +562,7 @@
     "\n",
     "plt.figure(figsize = (12, 6))\n",
     "plt.subplot(121)\n",
-    "plt.stem(freq, abs(X), 'g',  markerfmt=\" \", basefmt=\"-g\")\n",
+    "plt.stem(freq, np.abs(X), 'g',  markerfmt=\" \", basefmt=\"-g\")\n",
     "plt.xlabel('Freq (Hz)')\n",
     "plt.ylabel('FFT Amplitude |X(freq)|')\n",
     "plt.axvline(x = 1024, color = 'b')\n",
@@ -541,7 +576,7 @@
     "X_oneside =X[:n_oneside]/n_oneside\n",
     "\n",
     "plt.subplot(122)\n",
-    "plt.stem(f_oneside, abs(X_oneside), 'g', markerfmt=\" \", basefmt=\"-g\")\n",
+    "plt.stem(f_oneside, np.abs(X_oneside), 'g', markerfmt=\" \", basefmt=\"-g\")\n",
     "plt.xlabel('Freq (Hz)')\n",
     "plt.ylabel('Normalized FFT Amplitude |X(freq)|')\n",
     "plt.tight_layout()\n",
@@ -569,7 +604,7 @@
    "source": [
     "## A possible step further: Iterative Fast Fourier Transform Algorithm\n",
     "\n",
-    "The recursive FFT, as we saw earlier, has an arithmetic complexity of $\\mathcal{O}(N \\log(N))$ but, being a recursive algorithm, leads to relevant stack problems, as I experienced before trying to feed 10 billions complex numbers into the FFT algorithm causing my laptop to burn through all 32 GBs of ram and cursing me till the end of time. Looks like i won't be emulating ps2 games on the ThinkPad anytime soon. The problem lies in the fact that every recursion calls the function twice and each time it stores an array of length $2^n$ $n$ times. This is due to the fact that the recursive FFT is a \"out-of-place\" algorithm that allocates memory for each iteration without overwriting alreay allocated memory.\n",
+    "The recursive FFT, as we saw earlier, has an arithmetic complexity of $\\mathcal{O}(N \\log(N))$ but, being a recursive algorithm, leads to relevant stack problems, as I experienced after trying to feed 10 billions complex numbers into the FFT algorithm causing my laptop to burn through all 32 GBs of ram and obliterating my thinkpad into eternity. The problem lies in the fact that every recursion calls the function twice and each time it stores an array of length $2^n$ $n$ times. This is due to the fact that the recursive FFT is a \"out-of-place\" algorithm that allocates memory for each iteration without overwriting alreay allocated memory.\n",
     "\n",
     "A possible solution to this issue lies in a \"in-place\" version of the FFT algorithm that "
    ]
