--- a/fft.ipynb
+++ b/fft.ipynb
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -139,7 +139,7 @@
        " np.complex128(-3.9999999999999725-9.656854249492369j)]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -189,7 +189,7 @@
        "       -4.-4.00000000e+00j, -4.-9.65685425e+00j])"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -274,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -291,7 +291,7 @@
     "    r = range(N//2)\n",
     "    #calculate twiddle factors multiplied for the odd part\n",
     "    oddtwiddle = [np.exp(-2j * np.pi * k / N) * odd[k] for k in r]\n",
-    "    #concatenating the X_k component with the X_{k+N/2} component\n",
+    "    #concatenating the X_k component with the X_{k+N/2} component using list comprehension syntax\n",
     "    res = ([even[k] + oddtwiddle[k] for k in r] + [even[k] - oddtwiddle[k] for k in r])\n",
     "    return res\n"
    ]
@@ -305,37 +305,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "a=dit_FFT([1,2,3,4,5,6,7,8])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([36.        , 10.45250372,  5.65685425,  4.3295688 ,  4.        ,\n",
-       "        4.3295688 ,  5.65685425, 10.45250372])"
+       "[np.complex128(36+0j),\n",
+       " np.complex128(-4+9.65685424949238j),\n",
+       " np.complex128(-4+4j),\n",
+       " np.complex128(-4+1.6568542494923797j),\n",
+       " np.complex128(-4+0j),\n",
+       " np.complex128(-4-1.6568542494923806j),\n",
+       " np.complex128(-3.9999999999999996-4j),\n",
+       " np.complex128(-3.9999999999999987-9.65685424949238j)]"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "np.abs(a)"
+    "dit_FFT([1,2,3,4,5,6,7,8])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -351,7 +348,7 @@
        " np.complex128(-3.9999999999999725-9.656854249492369j)]"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -369,15 +366,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "11.7 μs ± 84.3 ns per loop (mean ± std. dev. of 7 runs, 100,000 loops each)\n",
-      "45.7 μs ± 273 ns per loop (mean ± std. dev. of 7 runs, 10,000 loops each)\n"
+      "28.3 μs ± 3.58 μs per loop (mean ± std. dev. of 7 runs, 10,000 loops each)\n",
+      "104 μs ± 8.06 μs per loop (mean ± std. dev. of 7 runs, 10,000 loops each)\n"
      ]
     }
    ],
@@ -395,15 +392,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "33.7 μs ± 294 ns per loop (mean ± std. dev. of 7 runs, 10,000 loops each)\n",
-      "6.57 μs ± 38 ns per loop (mean ± std. dev. of 7 runs, 100,000 loops each)\n"
+      "25.5 μs ± 1.61 μs per loop (mean ± std. dev. of 7 runs, 10,000 loops each)\n",
+      "15.2 μs ± 355 ns per loop (mean ± std. dev. of 7 runs, 100,000 loops each)\n"
      ]
     }
    ],
@@ -421,17 +418,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "37.2 ns ± 0.211 ns per loop (mean ± std. dev. of 7 runs, 10,000,000 loops each)\n",
-      "300 μs ± 3.88 μs per loop (mean ± std. dev. of 7 runs, 1,000 loops each)\n",
-      "338 μs ± 9.4 μs per loop (mean ± std. dev. of 7 runs, 1,000 loops each)\n",
-      "38.5 ns ± 0.0761 ns per loop (mean ± std. dev. of 7 runs, 10,000,000 loops each)\n"
+      "97.3 ns ± 6.17 ns per loop (mean ± std. dev. of 7 runs, 10,000,000 loops each)\n",
+      "70 μs ± 755 ns per loop (mean ± std. dev. of 7 runs, 10,000 loops each)\n",
+      "131 μs ± 16.8 μs per loop (mean ± std. dev. of 7 runs, 10,000 loops each)\n"
      ]
     }
    ],
@@ -455,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -537,7 +533,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -606,7 +602,7 @@
     "\n",
     "The recursive FFT, as we saw earlier, has an arithmetic complexity of $\\mathcal{O}(N \\log(N))$ but, being a recursive algorithm, leads to relevant stack problems, as I experienced after trying to feed 10 billions complex numbers into the FFT algorithm causing my laptop to burn through all 32 GBs of ram and obliterating my thinkpad into eternity. The problem lies in the fact that every recursion calls the function twice and each time it stores an array of length $2^n$ $n$ times. This is due to the fact that the recursive FFT is a \"out-of-place\" algorithm that allocates memory for each iteration without overwriting alreay allocated memory.\n",
     "\n",
-    "A possible solution to this issue lies in a \"in-place\" version of the FFT algorithm that "
+    "A possible solution to this issue lies in a \"in-place\" version of the FFT algorithm that overwrites the already allocated memory stack. "
    ]
   }
  ],
