--- a/fft.ipynb
+++ b/fft.ipynb
@@ -608,8 +608,22 @@
     "The recursive FFT, as we saw earlier, has an arithmetic complexity of $\\mathcal{O}(N \\log(N))$ but, being a recursive algorithm, leads to relevant stack problems, as I experienced after trying to feed 10 billions complex numbers into the FFT algorithm causing my laptop to burn through all 32 GBs of ram and obliterating my thinkpad into eternity. The problem lies in the fact that every recursion calls the function twice and each time it stores an array of length $2^n$ $n$ times. This is due to the fact that the recursive FFT is a \"out-of-place\" algorithm that allocates memory for each iteration without overwriting alreay allocated memory.\n",
     "\n",
     "A possible solution to this issue lies in a \"in-place\" version of the FFT algorithm that overwrites the already allocated memory stack. Let's observe how the input vector components get rearranged. The image below represents the case for an input of length 8. Note how the bottom layer shows the single input components arranged in a particular order.\n",
+    "\n",
     "![image.png](attachment:image.png)\n",
-    "If we could arrange from the start the input components in a order that resembles the one reached by the deepest level of recursion (that is, when $N=1$), we could create a non-recursive approach for the FFT algorithm that works \"bottom up\". The idea behind this algorithm is taking the elements in pairs, applying the butterfly operation that multiplies/adds two inputs with the twiddle factor "
+    "\n",
+    "If we could arrange from the start the input components in a order that resembles the one reached by the deepest level of recursion (that is, when $N=1$), we could create a non-recursive approach for the FFT algorithm that works \"bottom up\". The idea behind this algorithm is the following:\n",
+    "1. we store in an array $A[0,\\ldots,n-1]$ in the order in which they appear in the leaves of the recursion tree;\n",
+    "2. we take the elements in pairs, applying the butterfly operation that multiplies/adds two inputs with the twiddle factor to obtain $X_k=\\text{evenFFT}_k+e^{-i\\frac{2\\pi}{N}k}\\cdot \\text{oddFFT}_k$ and $X_{k+\\frac{N}{2}}=\\text{evenFFT}_k-e^{-i\\frac{2\\pi}{N}k}\\cdot \\text{oddFFT}_k$. This will provide us with $N/2$ size 2 DFTs of each pair;\n",
+    "3. we replace the pairs in the array with their DFTs;\n",
+    "4. we take these $N/2$ DFTs (of size $2$ each) in pair and we compute the DFT of the $N/4$ groups of 4 input each that sit at the upper level in the recursion tree. This operation will apply two butterfly operations (since we are dealing with inputs of length 4);\n",
+    "5. we write these $N/4$ size 4 DFTs in the array;\n",
+    "6. we iterate the procedure untile the array holds 2 size $N/2$ DFTs, which we can combine using $N/2$ butterfly operations to obtain out final $N$ size DFT.\n",
+    "\n",
+    "To do this, we must firstly fill an array wtih the input component in the particular order that they appear in the \n",
+    "\n",
+    "| Stretch/Untouched | ProbDistribution | Accuracy |\n",
+    "| --- | --- | --- |\n",
+    "| Stretched | Gaussian | .843 |"
    ]
   }
  ],
