vorrei tanto morire

--- a/tex/main.tex
+++ b/tex/main.tex
@@ -1,4 +1,12 @@
 \documentclass{article}
+\usepackage{pacco}
+\usepackage[
+backend=biber,
+style=alphabetic,
+sorting=ynt
+]{biblatex}
+\addbibresource{biblio.bib}
 \begin{document}
-	\input{fft.tex}
+\input{fft.tex}
+	\printbibliography
 \end{document}
