--- a/tex/fft.tex
+++ b/tex/fft.tex
@@ -23,5 +23,8 @@ Original index (binary) &000 &001 &010 &011 &100 &101 &110 &111\\
 Final index (binary) &000 &100 &010 &110 &001 &101 &110 &111\\
 \hline
 \end{tabular}\end{center}
-We can see that the final index is the \textit{bit-reversed} version of the original index: that is, to obtain the final index we must reverse the order of the bits that express the original index \cite{introalgo}.
+We can see that the final index is the \textit{bit-reversed}\footnote{\cite{introalgo}, p.939} version of the original index: that is, to obtain the final index we must reverse the order of the bits that express the original index.
+ahah
+
 \end{document}
+
