--- a/tex/pacco.sty
+++ b/tex/pacco.sty
@@ -13,10 +13,17 @@
 \usepackage[dvipsnames]{xcolor}
 \usepackage[colorlinks=true, allcolors=black!60!yellow]{hyperref}
 \usepackage{lipsum} 
+\usepackage[
+backend=biber,
+style=alphabetic,
+sorting=ynt
+]{biblatex}
+\addbibresource{biblio.bib}
 \usepackage[shortlabels]{enumitem}
 \usepackage{amsthm}   
 \usepackage{array}
 \usepackage{pdfpages}
+\usepackage{minted}
 \usepackage{standalone}
 \usepackage[makeroom]{cancel}
 \usepackage[many]{tcolorbox}
