--- a/fft.ipynb
+++ b/fft.ipynb
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -139,7 +139,7 @@
        " np.complex128(-3.9999999999999725-9.656854249492369j)]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -189,7 +189,7 @@
        "       -4.-4.00000000e+00j, -4.-9.65685425e+00j])"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -274,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -305,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -321,7 +321,7 @@
        " np.complex128(-3.9999999999999987-9.65685424949238j)]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -332,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -348,7 +348,7 @@
        " np.complex128(-3.9999999999999725-9.656854249492369j)]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -366,15 +366,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "28.3 μs ± 3.58 μs per loop (mean ± std. dev. of 7 runs, 10,000 loops each)\n",
-      "104 μs ± 8.06 μs per loop (mean ± std. dev. of 7 runs, 10,000 loops each)\n"
+      "24.1 μs ± 1.18 μs per loop (mean ± std. dev. of 7 runs, 10,000 loops each)\n",
+      "98.1 μs ± 4.86 μs per loop (mean ± std. dev. of 7 runs, 10,000 loops each)\n"
      ]
     }
    ],
@@ -392,15 +392,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "25.5 μs ± 1.61 μs per loop (mean ± std. dev. of 7 runs, 10,000 loops each)\n",
-      "15.2 μs ± 355 ns per loop (mean ± std. dev. of 7 runs, 100,000 loops each)\n"
+      "25.2 μs ± 1.39 μs per loop (mean ± std. dev. of 7 runs, 10,000 loops each)\n",
+      "15.3 μs ± 161 ns per loop (mean ± std. dev. of 7 runs, 100,000 loops each)\n"
      ]
     }
    ],
@@ -418,16 +418,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "97.3 ns ± 6.17 ns per loop (mean ± std. dev. of 7 runs, 10,000,000 loops each)\n",
-      "70 μs ± 755 ns per loop (mean ± std. dev. of 7 runs, 10,000 loops each)\n",
-      "131 μs ± 16.8 μs per loop (mean ± std. dev. of 7 runs, 10,000 loops each)\n"
+      "98.3 ns ± 2.79 ns per loop (mean ± std. dev. of 7 runs, 10,000,000 loops each)\n",
+      "71.4 μs ± 1.57 μs per loop (mean ± std. dev. of 7 runs, 10,000 loops each)\n",
+      "134 μs ± 24 μs per loop (mean ± std. dev. of 7 runs, 10,000 loops each)\n"
      ]
     }
    ],
@@ -451,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -533,7 +533,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -619,11 +619,60 @@
     "5. we write these $N/4$ size 4 DFTs in the array;\n",
     "6. we iterate the procedure untile the array holds 2 size $N/2$ DFTs, which we can combine using $N/2$ butterfly operations to obtain out final $N$ size DFT.\n",
     "\n",
-    "To do this, we must firstly fill an array wtih the input component in the particular order that they appear in the \n",
+    "When examining the final arrangement of the array we note that the final indices are the __bit reversed__ version of the starting indices. It is easy then to create a function that, given an input array, creates a bit-reversed version."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 4, 2, 6, 1, 5, 3, 7]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def reverse(num, size):\n",
+    "    result = 0\n",
+    "    for _ in range(size): #shift result to the left bitwise and add the least significant bit to result\n",
+    "        result = (result << 1) + (num & 1)\n",
+    "        num >>= 1 #shift original number to the right bitwise (until none bits are left)\n",
+    "    return result\n",
     "\n",
-    "| Stretch/Untouched | ProbDistribution | Accuracy |\n",
-    "| --- | --- | --- |\n",
-    "| Stretched | Gaussian | .843 |"
+    "def bit_reversed_order(lst):\n",
+    "    n = len(lst)\n",
+    "    #bit reversal depends on the size of the integer: for each index we need a number of bits equal to the number of bits used to represent the highest index\n",
+    "    bit_size = n.bit_length() - 1 #using int class bit_length method\n",
+    "\n",
+    "    #note that the previous method for calculating the bit size only works because we expect the input to be a power of 2 and in binary powers of 2 are the numbers for which the number of bit needed for representation increases by 1. \n",
+    "    # If our input wasn't strictly in powers of 2 this method wouldn't be correct (for example, if n=5 then we would get a bit size of 2, which are too few to represent the number 4).\n",
+    "\n",
+    "    res = [0 for i in range(n)]\n",
+    "    for i in range(n):\n",
+    "        reversed_index = reverse(i, bit_size)\n",
+    "        res[reversed_index] = lst[i]\n",
+    "\n",
+    "    return res\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now that we have devised a method to output a list in bit-reversed order, we can turn our attention to the iterative fft method itself."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def inplace_FFT:\n"
    ]
   }
  ],
