--- a/fft.ipynb
+++ b/fft.ipynb
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -139,7 +139,7 @@
        " np.complex128(-3.9999999999999725-9.656854249492369j)]"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -189,7 +189,7 @@
        "       -4.-4.00000000e+00j, -4.-9.65685425e+00j])"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -274,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -305,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -321,7 +321,7 @@
        " np.complex128(-3.9999999999999987-9.65685424949238j)]"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -332,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -348,7 +348,7 @@
        " np.complex128(-3.9999999999999725-9.656854249492369j)]"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -366,15 +366,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "24.1 μs ± 1.18 μs per loop (mean ± std. dev. of 7 runs, 10,000 loops each)\n",
-      "98.1 μs ± 4.86 μs per loop (mean ± std. dev. of 7 runs, 10,000 loops each)\n"
+      "25.4 μs ± 1.14 μs per loop (mean ± std. dev. of 7 runs, 10,000 loops each)\n",
+      "98.2 μs ± 1.99 μs per loop (mean ± std. dev. of 7 runs, 10,000 loops each)\n"
      ]
     }
    ],
@@ -392,15 +392,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "25.2 μs ± 1.39 μs per loop (mean ± std. dev. of 7 runs, 10,000 loops each)\n",
-      "15.3 μs ± 161 ns per loop (mean ± std. dev. of 7 runs, 100,000 loops each)\n"
+      "24.9 μs ± 1.11 μs per loop (mean ± std. dev. of 7 runs, 10,000 loops each)\n",
+      "14.8 μs ± 223 ns per loop (mean ± std. dev. of 7 runs, 100,000 loops each)\n"
      ]
     }
    ],
@@ -418,16 +418,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "98.3 ns ± 2.79 ns per loop (mean ± std. dev. of 7 runs, 10,000,000 loops each)\n",
-      "71.4 μs ± 1.57 μs per loop (mean ± std. dev. of 7 runs, 10,000 loops each)\n",
-      "134 μs ± 24 μs per loop (mean ± std. dev. of 7 runs, 10,000 loops each)\n"
+      "98.6 ns ± 2.8 ns per loop (mean ± std. dev. of 7 runs, 10,000,000 loops each)\n",
+      "69.5 μs ± 1.79 μs per loop (mean ± std. dev. of 7 runs, 10,000 loops each)\n",
+      "157 μs ± 19.5 μs per loop (mean ± std. dev. of 7 runs, 10,000 loops each)\n"
      ]
     }
    ],
@@ -451,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -533,7 +533,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -624,17 +624,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[0, 4, 2, 6, 1, 5, 3, 7]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def reverse(num, size):\n",
     "    result = 0\n",
@@ -643,7 +635,7 @@
     "        num >>= 1 #shift original number to the right bitwise (until none bits are left)\n",
     "    return result\n",
     "\n",
-    "def bit_reversed_order(lst):\n",
+    "def bit_reversal(lst):\n",
     "    n = len(lst)\n",
     "    #bit reversal depends on the size of the integer: for each index we need a number of bits equal to the number of bits used to represent the highest index\n",
     "    bit_size = n.bit_length() - 1 #using int class bit_length method\n",
@@ -668,11 +660,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def inplace_FFT:\n"
+    "def inplace_FFT(x):\n",
+    "    revx=bit_reversal()"
    ]
   }
  ],
