--- a/tex/pacco.sty
+++ b/tex/pacco.sty
@@ -68,7 +68,11 @@
 		}{%
 		\end{rema*}% 
 	}
+
 	
+	\newminted{python}{mathescape, linenos, numbersep=5pt, frame=single, breaklines,bgcolor=gray!9, fontfamily=courier,python3,rulecolor=Emerald,numbersep=5pt,label=Python,xleftmargin=0pt}
+		\newenvironment{py}{\VerbatimEnvironment\begin{pythoncode}}{\end{pythoncode}}
+			
 	\newcounter{defi}
 	
 	\newtcbtheorem[number within=section]{nition}{Definition}{
