--- a/tex/fft.tex
+++ b/tex/fft.tex
@@ -24,14 +24,7 @@ Final index (binary) &000 &100 &010 &110 &001 &101 &110 &111\\
 \hline
 \end{tabular}\end{center}
 We can see that the final index is the \textit{bit-reversed}\footnote{\cite{introalgo} p. 913} version of the original index: that is, to obtain the final index we must reverse the order of the bits that express the original index.
-\begin{minted}[mathescape,
-	linenos,
-	numbersep=5pt,
-	frame=single,
-	breaklines,
-	numbersep=5pt,
-	xleftmargin=0pt,
-	]{python}
+\begin{py}
 def reverse(num, size):
 result = 0
 for _ in range(size): #shift result to the left bitwise and add the least significant bit to result
@@ -53,6 +46,7 @@ reversed_index = reverse(i, bit_size)
 res[reversed_index] = lst[i]
 
 return res
-\end{minted}
+\end{py}
+
 \end{document}
 
