--- a/tex/biblio.bib
+++ b/tex/biblio.bib
@@ -4,3 +4,13 @@
     year={2009},
     publisher={McGraw Hill},
 }
+@article{family,
+	author={Rockmore, D.N.},
+	journal={Computing in Science & Engineering}, 
+	title={The FFT: an algorithm the whole family can use}, 
+	year={2000},
+	volume={2},
+	number={1},
+	pages={60-64},
+	keywords={Discrete Fourier transforms;Equations;Signal processing algorithms;Fast Fourier transforms;Mathematics;Orbital calculations;Convolution;Information processing;Internet;Modems},
+	doi={10.1109/5992.814659}}
