sono una persona orribile

--- a/tex/biblio.bib
+++ b/tex/biblio.bib
@@ -14,3 +14,12 @@
 	pages={60-64},
 	keywords={Discrete Fourier transforms;Equations;Signal processing algorithms;Fast Fourier transforms;Mathematics;Orbital calculations;Convolution;Information processing;Internet;Modems},
 	doi={10.1109/5992.814659}}
+	
+	@inproceedings{librosa,
+		author = {McFee, Brian and Raffel, Colin and Liang, Dawen and Ellis, Daniel and Mcvicar, Matt and Battenberg, Eric and Nieto, Oriol},
+		year = {2015},
+		month = {01},
+		pages = {18-24},
+		title = {librosa: Audio and Music Signal Analysis in Python},
+		doi = {10.25080/Majora-7b98e3ed-003}
+	}
