--- a/tex/biblio.bib
+++ b/tex/biblio.bib
@@ -23,3 +23,25 @@
 		title = {librosa: Audio and Music Signal Analysis in Python},
 		doi = {10.25080/Majora-7b98e3ed-003}
 	}
+
+@article{nokiaphvcd,
+	author={Flanagan, J. L. and Golden, R. M.},
+	journal={The Bell System Technical Journal}, 
+	title={Phase vocoder}, 
+	year={1966},
+	volume={45},
+	number={9},
+	pages={1493-1509},
+	keywords={},
+	doi={10.1002/j.1538-7305.1966.tb01706.x}}
+
+@article{larochedolson,
+	author={Laroche, J. and Dolson, M.},
+	journal={IEEE Transactions on Speech and Audio Processing}, 
+	title={Improved phase vocoder time-scale modification of audio}, 
+	year={1999},
+	volume={7},
+	number={3},
+	pages={323-332},
+	keywords={Vocoders;Time domain analysis;Fourier transforms;Computational efficiency;Signal processing;Frequency synchronization;Speech processing;Telephony;Frequency modulation;Reverberation},
+	doi={10.1109/89.759041}}
