--- a/tex/biblio.bib
+++ b/tex/biblio.bib
@@ -45,3 +45,15 @@
 	pages={323-332},
 	keywords={Vocoders;Time domain analysis;Fourier transforms;Computational efficiency;Signal processing;Frequency synchronization;Speech processing;Telephony;Frequency modulation;Reverberation},
 	doi={10.1109/89.759041}}
+	
+@INPROCEEDINGS{istft,
+	author={Bin Yang},
+	booktitle={2008 IEEE International Conference on Acoustics, Speech and Signal Processing}, 
+	title={A study of inverse short-time fourier transform}, 
+	year={2008},
+	volume={},
+	number={},
+	pages={3541-3544},
+	keywords={Fourier transforms;Signal processing;Least squares methods;Frequency estimation;Least squares approximation;Signal analysis;Time varying systems;Time frequency analysis;Speech enhancement;Blind source separation;inverse short-time Fourier transform;timefrequency analysis;least squares methods},
+	doi={10.1109/ICASSP.2008.4518416}}
+
